fixed the h3 wrapping, but the button in the card is still broken - this appears to be styles clashing and I'm not wondering if modules are being applied correctly. need to className everything in the module with the other button and then see if this stops it clashing

--- a/not_ok/src/components/Card/Card.module.css
+++ b/not_ok/src/components/Card/Card.module.css
@@ -22,7 +22,7 @@
     justify-content: center;
 }
 
-.imagecontainer img{
+.imagecontainer img {
     margin-top: 1rem;
     overflow: hidden;
     height: 200px;
@@ -38,6 +38,7 @@
     /*resetting default value*/
     margin: 0;
     padding: 0;
+    max-width: 100%;
 }
 
 .cardtitle {
