--- a/not_ok/src/pages/HappyDosePage.module.css
+++ b/not_ok/src/pages/HappyDosePage.module.css
@@ -35,15 +35,15 @@ h2 {
     min-width: 70%;
 }
 
-h3 {
+/* h3 {
     font-size: 1.5rem;
     width: 300px;
     max-width: 30%;
     margin-left: 1rem;
     margin-bottom: 2rem;
-}
+} */
 
-.quote-text p {
+/* .quote-text p {
     text-align: center;
     color: black;
     font-size: 2.5rem;
@@ -57,4 +57,4 @@ h3 {
     margin-right: 10%;
     margin-top: 5rem;
     font-family: 'Caveat', cursive;
-}
+} */
